# cnb-labeler-old

./: .gitignore  README.md  config.py  pyproject.toml
cnb_labeler/: compile_labels.py  dict_utils.py  negative_labeler.py  positive_labeler.py  scenario_cardword_sense.py  scenario_clue_sense.py  scenario_creator.py  scenario_labeler.py  set_clue_thresholds.py
labels/: clue_threshold.json  negative_labels.json  positive_labels.json  scenarios.json  scenarios_old.json
output/: test_labels.json  train_labels.json
