[tool.poetry]
name = "cnb-labeler"
version = "0.1.0"
description = ""
authors = ["Nalu Zou"]
readme = "README.md"
packages = [{include = "cnb_labeler"}]

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[tool.poetry.scripts]
format                          = "tasks:format"

negative-labeler                = "cnb_labeler.negative_labeler:main"
positive-labeler                = "cnb_labeler.positive_labeler:main"
scenario-creator                = "cnb_labeler.scenario_creator:main"
compile-labels                  = "cnb_labeler.compile_labels:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
